AC_INIT(Main/Source/area.cpp)

AM_INIT_AUTOMAKE(ivan,0.310)
AC_PROG_CC

AC_PROG_CXX

dnl Check for SDL
SDL_VERSION=1.0.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS "
LIBS="$LIBS $SDL_LIBS"
CPPFLAGS=-DDATADIR=\\\"$datadir\\\" -DUSE_SDL
#"@datadir\@"
AC_PROG_INSTALL

AC_PROG_RANLIB

AC_OUTPUT(Makefile FEEL/Makefile FEEL/Include/Makefile FEEL/Source/Makefile FeDX/Makefile Script/Makefile FeDX/Include/Makefile FeDX/Source/Makefile FeIO/Makefile FeIO/Include/Makefile FeIO/Source/Makefile FeWin/Makefile FeWin/Include/Makefile FeWin/Source/Makefile FELL/Makefile FELL/Include/Makefile FELL/Source/Makefile FeFile/Makefile FeFile/Include/Makefile FeFile/Source/Makefile FeMath/Makefile FeMath/Include/Makefile FeMath/Source/Makefile Graphics/Makefile Include/Makefile Main/Makefile Main/Include/Makefile Main/Resource/Makefile Main/Source/Makefile)









