AC_INIT(Main/Source/area.cpp)

#AM_PROG_AS Doesn't seem to work anymore!
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(ivan,0.40)
AC_PROG_CC

AC_PROG_CXX

dnl Check for SDL
SDL_VERSION=1.0.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

CFLAGS="$CFLAGS $SDL_CFLAGS "
LIBS="$LIBS $SDL_LIBS"
CPPFLAGS="$SDL_CFLAGS -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
#"@datadir\@"
AC_PROG_INSTALL

AC_PROG_RANLIB

AC_OUTPUT(Makefile FeLib/Makefile FeLib/Include/Makefile FeLib/Source/Makefile Script/Makefile Graphics/Makefile Main/Makefile Main/Include/Makefile Main/Resource/Makefile Main/Source/Makefile)
