graphicdir = $(datadir)/ivan/Graphics/
graphic_DATA = Char.pcx Cursor.pcx Font.pcx FOW.pcx GLTerrain.pcx Humanoid.pcx Item.pcx Menu.pcx OLTerrain.pcx Symbol.pcx WTerrain.pcx
EXTRA_DIST = Char.pcx Cursor.pcx Font.pcx FOW.pcx GLTerrain.pcx Humanoid.pcx Item.pcx Menu.pcx OLTerrain.pcx Symbol.pcx WTerrain.pcx
