AC_INIT(mihail,0.91)
AC_CANONICAL_TARGET

AC_CONFIG_SRCDIR(Source/mihail.cpp)
AM_INIT_AUTOMAKE(mihail, 0.91)
AM_PROG_AS 
AC_PROG_CC

AC_PROG_CXX

dnl Check for SDL
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

CFLAGS="$CFLAGS $SDL_CFLAGS "
LIBS="$LIBS $SDL_LIBS"

CPPFLAGS="$CPPFLAGS $SDL_CFLAGS -DLINUX -DUSE_SDL -DGCC -DLOCAL_STATE_DIR=\\\"@localstatedir@/ivan/\\\" -DDATADIR=\\\"$datadir\\\""

AC_PROG_INSTALL

AC_PROG_RANLIB

AC_OUTPUT(Makefile FeLib/Makefile FeLib/Include/Makefile FeLib/Source/Makefile Source/Makefile)
