noinst_LIBRARIES = libFEEL.a
libFEEL_a_SOURCES = error.cpp femain.cpp

INCLUDES=-I@top_srcdir@/FELL/Include -I@top_srcdir@/FeDX/Include -I@top_srcdir@/FEIO/Include -I@top_srcdir@/FeWin/Include -I@top_srcdir@/FEEL/Include -I@top_srcdir@/FeFile/Include -I@top_srcdir@/FeMath/Include -I@top_srcdir@/Include

