noinst_LIBRARIES = libFELL.a
libFELL_a_SOURCES = felist.cpp hscore.cpp

INCLUDES=-I@top_srcdir@/FELL/Include -I@top_srcdir@/FeDX/Include -I@top_srcdir@/FEIO/Include -I@top_srcdir@/FeWin/Include -I@top_srcdir@/FEEL/Include -I@top_srcdir@/FeFile/Include -I@top_srcdir@/FeMath/Include -I@top_srcdir@/Include

