noinst_LIBRARIES = libFeDX.a
libFeDX_a_SOURCES = colorbit.cpp gccblit.s bitmap.cpp graphics.cpp
EXTRA_DIST = dxutil.cpp ddutil.cpp winblit.cpp 
INCLUDES=-I@top_srcdir@/FELL/Include -I@top_srcdir@/FeDX/Include -I@top_srcdir@/FEIO/Include -I@top_srcdir@/FeWin/Include -I@top_srcdir@/FEEL/Include -I@top_srcdir@/FeFile/Include -I@top_srcdir@/FeMath/Include -I@top_srcdir@/Include

