noinst_HEADERS = actionba.h actionde.h area.h charba.h charde.h command.h config.h cont.h dungeon.h entity.h fluid.h game.h godba.h godde.h id.h igraph.h itemba.h itemde.h level.h lsquare.h lterraba.h lterrade.h main.h materba.h materde.h message.h object.h pool.h proto.h roomba.h roomde.h script.h slot.h square.h stack.h team.h terra.h unit.h worldmap.h wskill.h wsquare.h wterraba.h wterrade.h
