noinst_HEADERS = action.h actions.h area.h bodypart.h char.h command.h confdef.h config.h cont.h database.h dungeon.h entity.h fluid.h game.h gear.h god.h gods.h human.h id.h igraph.h item.h ivandef.h level.h lsquare.h lterra.h lterras.h materia.h materias.h message.h miscitem.h nonhuman.h object.h pool.h proto.h room.h rooms.h script.h slot.h square.h stack.h team.h terra.h worldmap.h wskill.h wsquare.h wterra.h wterras.h
