bin_PROGRAMS = ivan
INCLUDES=-I@top_srcdir@/FELL/Include -I@top_srcdir@/FeDX/Include -I@top_srcdir@/FeIO/Include -I@top_srcdir@/FeWin/Include -I@top_srcdir@/FEEL/Include -I@top_srcdir@/FeFile/Include -I@top_srcdir@/FeMath/Include -I@top_srcdir@/Include -I@top_srcdir@/Main/Include

ivan_SOURCES = area.cpp charba.cpp charde.cpp config.cpp cont.cpp dungeon.cpp entity.cpp fluid.cpp game.cpp godba.cpp godde.cpp igraph.cpp itemba.cpp itemde.cpp level.cpp lsquare.cpp lterraba.cpp lterrade.cpp main.cpp materba.cpp materde.cpp message.cpp object.cpp pool.cpp proto.cpp roomba.cpp roomde.cpp script.cpp square.cpp stack.cpp team.cpp terra.cpp type.cpp unit.cpp worldmap.cpp wskill.cpp wsquare.cpp wterraba.cpp wterrade.cpp 
LDADD = @top_srcdir@/FeWin/Source/libFeWin.a @top_srcdir@/FEEL/Source/libFEEL.a @top_srcdir@/FELL/Source/libFELL.a @top_srcdir@/FeFile/Source/libFeFile.a @top_srcdir@/FeMath/Source/libFeMath.a @top_srcdir@/FeDX/Source/libFeDX.a @top_srcdir@/FeIO/Source/libFeIO.a


