bin_PROGRAMS = ivan
INCLUDES=-I@top_srcdir@/FeLib/Include -I@top_srcdir@/Main/Include

ivan_SOURCES = actionba.cpp actionde.cpp area.cpp charba.cpp charde.cpp config.cpp cont.cpp database.cpp dungeon.cpp entity.cpp fluid.cpp game.cpp godba.cpp godde.cpp id.cpp igraph.cpp itemba.cpp itemde.cpp level.cpp lsquare.cpp lterraba.cpp lterrade.cpp main.cpp materba.cpp materde.cpp message.cpp object.cpp pool.cpp proto.cpp roomba.cpp roomde.cpp script.cpp slot.cpp square.cpp stack.cpp team.cpp terra.cpp worldmap.cpp wskill.cpp wsquare.cpp wterraba.cpp wterrade.cpp
LDADD = @top_srcdir@/FeLib/Source/libFeLib.a
