bin_PROGRAMS = ivan
INCLUDES=-I@top_srcdir@/FeLib/Include -I@top_srcdir@/Main/Include
ivan_SOURCES = actset.cpp areaset.cpp charset.cpp charsset.cpp config.cpp coreset.cpp dataset.cpp dungeon.cpp fluid.cpp game.cpp godset.cpp id.cpp igraph.cpp itemset.cpp levelset.cpp main.cpp materset.cpp message.cpp object.cpp roomset.cpp slotset.cpp wmapset.cpp wskill.cpp
ivan_LDADD = @top_builddir@/FeLib/Source/libFeLib.a
EXTRA_DIST = action.cpp actions.cpp area.cpp bodypart.cpp char.cpp command.cpp cont.cpp database.cpp entity.cpp gear.cpp god.cpp gods.cpp human.cpp item.cpp level.cpp lsquare.cpp lterra.cpp lterras.cpp materia.cpp materias.cpp miscitem.cpp nonhuman.cpp pool.cpp proto.cpp room.cpp rooms.cpp script.cpp slot.cpp square.cpp stack.cpp team.cpp terra.cpp worldmap.cpp wsquare.cpp wterra.cpp wterras.cpp
